syntax = "proto2";

package org.observertc.schemas.protobuf;

message Samples {
	message Controls {
		optional string accessClaim = 1;
		optional bool close = 2;
	}
	message ClientSample {
		message Engine {
			optional string name = 1;
			optional string version = 2;
		}
		message Platform {
			optional string model = 1;
			optional string type = 2;
			optional string vendor = 3;
		}
		message Browser {
			optional string name = 1;
			optional string version = 2;
		}
		message OperationSystem {
			optional string name = 1;
			optional string version = 2;
			optional string versionName = 3;
		}
		message MediaDevice {
			optional string id = 1;
			optional string kind = 2;
			optional string label = 3;
		}
		message ExtensionStat {
			required string payload = 1;
			required string type = 2;
		}
		message CustomCallEvent {
			required string name = 1;
			optional string attachments = 2;
			optional string mediaTrackId = 3;
			optional string message = 4;
			optional string peerConnectionId = 5;
			optional int64 timestamp = 6;
			optional string value = 7;
		}
		message CustomObserverEvent {
			required string name = 1;
			optional string attachments = 2;
			optional string mediaTrackId = 3;
			optional string message = 4;
			optional int64 timestamp = 5;
		}
		message DataChannel {
			required string peerConnectionId = 1;
			optional int64 bytesReceived = 2;
			optional int64 bytesSent = 3;
			optional int32 dataChannelIdentifier = 4;
			optional string label = 5;
			optional int32 messageReceived = 6;
			optional int32 messageSent = 7;
			optional string protocol = 8;
			optional string state = 9;
		}
		message PeerConnectionTransport {
			required string peerConnectionId = 1;
			required string transportId = 2;
			optional int64 bytesReceived = 3;
			optional int64 bytesSent = 4;
			optional string dtlsCipher = 5;
			optional string dtlsRole = 6;
			optional string dtlsState = 7;
			optional string iceLocalUsernameFragment = 8;
			optional string iceRole = 9;
			optional string iceState = 10;
			optional string label = 11;
			optional string localCertificateId = 12;
			optional int32 packetsReceived = 13;
			optional int32 packetsSent = 14;
			optional string remoteCertificateId = 15;
			optional int32 selectedCandidatePairChanges = 16;
			optional string selectedCandidatePairId = 17;
			optional string srtpCipher = 18;
			optional string tlsGroup = 19;
			optional string tlsVersion = 20;
		}
		message IceCandidatePair {
			required string candidatePairId = 1;
			required string peerConnectionId = 2;
			optional double availableIncomingBitrate = 3;
			optional double availableOutgoingBitrate = 4;
			optional int64 bytesDiscardedOnSend = 5;
			optional int64 bytesReceived = 6;
			optional int64 bytesSent = 7;
			optional int32 consentRequestsSent = 8;
			optional double currentRoundTripTime = 9;
			optional string label = 10;
			optional int64 lastPacketReceivedTimestamp = 11;
			optional int64 lastPacketSentTimestamp = 12;
			optional string localCandidateId = 13;
			optional bool nominated = 14;
			optional int32 packetsDiscardedOnSend = 15;
			optional int32 packetsReceived = 16;
			optional int32 packetsSent = 17;
			optional string remoteCandidateId = 18;
			optional int32 requestsReceived = 19;
			optional int32 requestsSent = 20;
			optional int32 responsesReceived = 21;
			optional int32 responsesSent = 22;
			optional string state = 23;
			optional double totalRoundTripTime = 24;
			optional string transportId = 25;
		}
		message MediaSourceStat {
			optional double audioLevel = 1;
			optional double droppedSamplesDuration = 2;
			optional int32 droppedSamplesEvents = 3;
			optional double echoReturnLoss = 4;
			optional double echoReturnLossEnhancement = 5;
			optional int32 frames = 6;
			optional double framesPerSecond = 7;
			optional int32 height = 8;
			optional string kind = 9;
			optional bool relayedSource = 10;
			optional double totalAudioEnergy = 11;
			optional double totalCaptureDelay = 12;
			optional double totalSamplesCaptured = 13;
			optional double totalSamplesDuration = 14;
			optional string trackIdentifier = 15;
			optional int32 width = 16;
		}
		message MediaCodecStats {
			optional int32 channels = 1;
			optional int32 clockRate = 2;
			optional string codecType = 3;
			optional string mimeType = 4;
			optional string payloadType = 5;
			optional string sdpFmtpLine = 6;
		}
		message Certificate {
			optional string base64Certificate = 1;
			optional string fingerprint = 2;
			optional string fingerprintAlgorithm = 3;
			optional string issuerCertificateId = 4;
		}
		message InboundAudioTrack {
			required int64 ssrc = 1;
			optional int32 audioLevel = 2;
			optional int64 bytesReceived = 3;
			optional int64 bytesSent = 4;
			optional int32 concealedSamples = 5;
			optional int32 concealmentEvents = 6;
			optional string decoderImplementation = 7;
			optional int64 estimatedPlayoutTimestamp = 8;
			optional int32 fecPacketsDiscarded = 9;
			optional int32 fecPacketsReceived = 10;
			optional int64 headerBytesReceived = 11;
			optional int32 insertedSamplesForDeceleration = 12;
			optional double jitter = 13;
			optional double jitterBufferDelay = 14;
			optional int32 jitterBufferEmittedCount = 15;
			optional double jitterBufferMinimumDelay = 16;
			optional double jitterBufferTargetDelay = 17;
			optional int64 lastPacketReceivedTimestamp = 18;
			optional int32 nackCount = 19;
			optional int32 packetsDiscarded = 20;
			optional int32 packetsLost = 21;
			optional int32 packetsReceived = 22;
			optional int32 packetsSent = 23;
			optional string peerConnectionId = 24;
			optional string remoteClientId = 25;
			optional int64 remoteTimestamp = 26;
			optional int32 removedSamplesForAcceleration = 27;
			optional int32 reportsSent = 28;
			optional double roundTripTime = 29;
			optional int32 roundTripTimeMeasurements = 30;
			optional string sfuSinkId = 31;
			optional string sfuStreamId = 32;
			optional int32 silentConcealedSamples = 33;
			optional int32 synthesizedSamplesDuration = 34;
			optional int32 synthesizedSamplesEvents = 35;
			optional int32 totalAudioEnergy = 36;
			optional double totalPlayoutDelay = 37;
			optional double totalProcessingDelay = 38;
			optional double totalRoundTripTime = 39;
			optional int32 totalSamplesCount = 40;
			optional int32 totalSamplesDuration = 41;
			optional int32 totalSamplesReceived = 42;
			optional string trackId = 43;
		}
		message InboundVideoTrack {
			required int64 ssrc = 1;
			optional int64 bytesReceived = 2;
			optional int64 bytesSent = 3;
			optional string decoderImplementation = 4;
			optional int64 estimatedPlayoutTimestamp = 5;
			optional int32 fecPacketsDiscarded = 6;
			optional int32 fecPacketsReceived = 7;
			optional int32 firCount = 8;
			optional int32 frameHeight = 9;
			optional int32 frameWidth = 10;
			optional int32 framesDecoded = 11;
			optional int32 framesDropped = 12;
			optional double framesPerSecond = 13;
			optional int32 framesReceived = 14;
			optional int64 headerBytesReceived = 15;
			optional double jitter = 16;
			optional double jitterBufferDelay = 17;
			optional int32 jitterBufferEmittedCount = 18;
			optional double jitterBufferMinimumDelay = 19;
			optional double jitterBufferTargetDelay = 20;
			optional int32 keyFramesDecoded = 21;
			optional int64 lastPacketReceivedTimestamp = 22;
			optional int32 nackCount = 23;
			optional int32 packetsDiscarded = 24;
			optional int32 packetsLost = 25;
			optional int32 packetsReceived = 26;
			optional int32 packetsSent = 27;
			optional string peerConnectionId = 28;
			optional int32 pliCount = 29;
			optional int64 qpSum = 30;
			optional string remoteClientId = 31;
			optional int64 remoteTimestamp = 32;
			optional int32 reportsSent = 33;
			optional double roundTripTime = 34;
			optional int32 roundTripTimeMeasurements = 35;
			optional string sfuSinkId = 36;
			optional string sfuStreamId = 37;
			optional double totalDecodeTime = 38;
			optional double totalInterFrameDelay = 39;
			optional double totalProcessingDelay = 40;
			optional double totalRoundTripTime = 41;
			optional double totalSquaredInterFrameDelay = 42;
			optional string trackId = 43;
		}
		message OutboundAudioTrack {
			required int64 ssrc = 1;
			optional bool active = 2;
			optional double audioLevel = 3;
			optional double averageRtcpInterval = 4;
			optional int64 bytesSent = 5;
			optional double droppedSamplesDuration = 6;
			optional int32 droppedSamplesEvents = 7;
			optional double echoReturnLoss = 8;
			optional double echoReturnLossEnhancement = 9;
			optional string encoderImplementation = 10;
			optional double fractionLost = 11;
			optional int64 headerBytesSent = 12;
			optional double jitter = 13;
			optional int32 nackCount = 14;
			optional int32 packetsLost = 15;
			optional int32 packetsReceived = 16;
			optional int32 packetsSent = 17;
			optional string peerConnectionId = 18;
			optional bool relayedSource = 19;
			optional int64 retransmittedBytesSent = 20;
			optional int32 retransmittedPacketsSent = 21;
			optional string rid = 22;
			optional double roundTripTime = 23;
			optional int32 roundTripTimeMeasurements = 24;
			optional string sfuStreamId = 25;
			optional int32 targetBitrate = 26;
			optional double totalAudioEnergy = 27;
			optional double totalCaptureDelay = 28;
			optional int64 totalEncodedBytesTarget = 29;
			optional double totalPacketSendDelay = 30;
			optional double totalRoundTripTime = 31;
			optional double totalSamplesCaptured = 32;
			optional double totalSamplesDuration = 33;
			optional string trackId = 34;
		}
		message OutboundVideoTrack {
			required int64 ssrc = 1;
			optional bool active = 2;
			optional double averageRtcpInterval = 3;
			optional int64 bytesSent = 4;
			optional string encoderImplementation = 5;
			optional int32 firCount = 6;
			optional double fractionLost = 7;
			optional int32 frameHeight = 8;
			optional int32 frameWidth = 9;
			optional int32 frames = 10;
			optional int32 framesDropped = 11;
			optional int32 framesEncoded = 12;
			optional double framesPerSecond = 13;
			optional int32 framesSent = 14;
			optional int64 headerBytesSent = 15;
			optional int32 height = 16;
			optional int32 hugeFramesSent = 17;
			optional double jitter = 18;
			optional int32 keyFramesEncoded = 19;
			optional int32 nackCount = 20;
			optional int32 packetsLost = 21;
			optional int32 packetsReceived = 22;
			optional int32 packetsSent = 23;
			optional string peerConnectionId = 24;
			optional int32 pliCount = 25;
			optional int64 qpSum = 26;
			optional double qualityLimitationDurationBandwidth = 27;
			optional double qualityLimitationDurationCPU = 28;
			optional double qualityLimitationDurationNone = 29;
			optional double qualityLimitationDurationOther = 30;
			optional string qualityLimitationReason = 31;
			optional int32 qualityLimitationResolutionChanges = 32;
			optional bool relayedSource = 33;
			optional int64 retransmittedBytesSent = 34;
			optional int32 retransmittedPacketsSent = 35;
			optional string rid = 36;
			optional double roundTripTime = 37;
			optional int32 roundTripTimeMeasurements = 38;
			optional string sfuStreamId = 39;
			optional int32 targetBitrate = 40;
			optional double totalEncodeTime = 41;
			optional int64 totalEncodedBytesTarget = 42;
			optional double totalPacketSendDelay = 43;
			optional double totalRoundTripTime = 44;
			optional string trackId = 45;
			optional int32 width = 46;
		}
		message IceLocalCandidate {
			optional string address = 1;
			optional string candidateType = 2;
			optional string id = 3;
			optional string peerConnectionId = 4;
			optional int32 port = 5;
			optional int64 priority = 6;
			optional string protocol = 7;
			optional string relayProtocol = 8;
			optional string url = 9;
		}
		message IceRemoteCandidate {
			optional string address = 1;
			optional string candidateType = 2;
			optional string id = 3;
			optional string peerConnectionId = 4;
			optional int32 port = 5;
			optional int64 priority = 6;
			optional string protocol = 7;
			optional string relayProtocol = 8;
			optional string url = 9;
		}
		repeated Certificate certificates = 1;
		repeated MediaCodecStats codecs = 2;
		repeated CustomCallEvent customCallEvents = 3;
		repeated CustomObserverEvent customObserverEvents = 4;
		repeated DataChannel dataChannels = 5;
		repeated ExtensionStat extensionStats = 6;
		repeated IceCandidatePair iceCandidatePairs = 7;
		repeated IceLocalCandidate iceLocalCandidates = 8;
		repeated IceRemoteCandidate iceRemoteCandidates = 9;
		repeated string iceServers = 10;
		repeated InboundAudioTrack inboundAudioTracks = 11;
		repeated InboundVideoTrack inboundVideoTracks = 12;
		repeated string localSDPs = 13;
		repeated string mediaConstraints = 14;
		repeated MediaDevice mediaDevices = 15;
		repeated MediaSourceStat mediaSources = 16;
		repeated OutboundAudioTrack outboundAudioTracks = 17;
		repeated OutboundVideoTrack outboundVideoTracks = 18;
		repeated PeerConnectionTransport pcTransports = 19;
		repeated string userMediaErrors = 20;
		required string clientId = 21;
		required int64 timestamp = 22;
		optional Browser browser = 23;
		optional string callId = 24;
		optional Engine engine = 25;
		optional string marker = 26;
		optional OperationSystem os = 27;
		optional Platform platform = 28;
		optional string roomId = 29;
		optional int32 sampleSeq = 30;
		optional int32 timeZoneOffsetInHours = 31;
		optional string userId = 32;
	}
	message SfuSample {
		message CustomSfuEvent {
			required string name = 1;
			optional string attachments = 2;
			optional string message = 3;
			optional string sfuSinkId = 4;
			optional string sfuStreamId = 5;
			optional int64 timestamp = 6;
			optional string transportId = 7;
			optional string value = 8;
		}
		message SfuTransport {
			required string transportId = 1;
			optional string dtlsState = 2;
			optional string iceRole = 3;
			optional string iceState = 4;
			optional bool internal = 5;
			optional string localAddress = 6;
			optional int32 localPort = 7;
			optional bool noReport = 8;
			optional string protocol = 9;
			optional string remoteAddress = 10;
			optional int32 remotePort = 11;
			optional int64 rtpBytesReceived = 12;
			optional int64 rtpBytesSent = 13;
			optional int32 rtpPacketsLost = 14;
			optional int32 rtpPacketsReceived = 15;
			optional int32 rtpPacketsSent = 16;
			optional int64 rtxBytesReceived = 17;
			optional int64 rtxBytesSent = 18;
			optional int32 rtxPacketsDiscarded = 19;
			optional int32 rtxPacketsLost = 20;
			optional int32 rtxPacketsReceived = 21;
			optional int32 rtxPacketsSent = 22;
			optional int64 sctpBytesReceived = 23;
			optional int64 sctpBytesSent = 24;
			optional int32 sctpPacketsReceived = 25;
			optional int32 sctpPacketsSent = 26;
			optional string sctpState = 27;
		}
		message SfuInboundRtpPad {
			required string padId = 1;
			required int64 ssrc = 2;
			required string streamId = 3;
			required string transportId = 4;
			optional int64 bytesReceived = 5;
			optional int32 clockRate = 6;
			optional int32 fecPacketsDiscarded = 7;
			optional int32 fecPacketsReceived = 8;
			optional int32 firCount = 9;
			optional double fractionLost = 10;
			optional int32 framesDecoded = 11;
			optional int32 framesReceived = 12;
			optional bool internal = 13;
			optional double jitter = 14;
			optional int32 keyFramesDecoded = 15;
			optional string mediaType = 16;
			optional string mimeType = 17;
			optional int32 nackCount = 18;
			optional bool noReport = 19;
			optional int32 packetsDiscarded = 20;
			optional int32 packetsDuplicated = 21;
			optional int32 packetsFailedDecryption = 22;
			optional int32 packetsLost = 23;
			optional int32 packetsReceived = 24;
			optional int32 packetsRepaired = 25;
			optional int32 payloadType = 26;
			optional int32 pliCount = 27;
			optional string rid = 28;
			optional double roundTripTime = 29;
			optional int32 rtcpRrSent = 30;
			optional int32 rtcpSrReceived = 31;
			optional int32 rtxPacketsDiscarded = 32;
			optional int32 rtxPacketsReceived = 33;
			optional int64 rtxSsrc = 34;
			optional string sdpFmtpLine = 35;
			optional int32 sliCount = 36;
			optional int32 targetBitrate = 37;
			optional bool voiceActivityFlag = 38;
		}
		message SfuOutboundRtpPad {
			required string padId = 1;
			required string sinkId = 2;
			required int64 ssrc = 3;
			required string streamId = 4;
			required string transportId = 5;
			optional int64 bytesSent = 6;
			optional string callId = 7;
			optional string clientId = 8;
			optional int32 clockRate = 9;
			optional int32 fecPacketsDiscarded = 10;
			optional int32 fecPacketsSent = 11;
			optional int32 firCount = 12;
			optional double fractionLost = 13;
			optional int32 framesEncoded = 14;
			optional int32 framesSent = 15;
			optional bool internal = 16;
			optional double jitter = 17;
			optional int32 keyFramesEncoded = 18;
			optional string mediaType = 19;
			optional string mimeType = 20;
			optional int32 nackCount = 21;
			optional bool noReport = 22;
			optional int32 packetsDiscarded = 23;
			optional int32 packetsDuplicated = 24;
			optional int32 packetsFailedEncryption = 25;
			optional int32 packetsLost = 26;
			optional int32 packetsRetransmitted = 27;
			optional int32 packetsSent = 28;
			optional int32 payloadType = 29;
			optional int32 pliCount = 30;
			optional string rid = 31;
			optional double roundTripTime = 32;
			optional int32 rtcpRrReceived = 33;
			optional int32 rtcpSrSent = 34;
			optional int32 rtxPacketsDiscarded = 35;
			optional int32 rtxPacketsSent = 36;
			optional int64 rtxSsrc = 37;
			optional string sdpFmtpLine = 38;
			optional int32 sliCount = 39;
			optional int32 targetBitrate = 40;
			optional string trackId = 41;
			optional bool voiceActivityFlag = 42;
		}
		message SfuSctpChannel {
			required string channelId = 1;
			required string streamId = 2;
			required string transportId = 3;
			optional int64 bytesReceived = 4;
			optional int64 bytesSent = 5;
			optional bool internal = 6;
			optional string label = 7;
			optional int32 messageReceived = 8;
			optional int32 messageSent = 9;
			optional bool noReport = 10;
			optional string protocol = 11;
			optional double sctpCongestionWindow = 12;
			optional int32 sctpMtu = 13;
			optional double sctpReceiverWindow = 14;
			optional double sctpSmoothedRoundTripTime = 15;
			optional int32 sctpUnackData = 16;
		}
		message SfuExtensionStats {
			required string payload = 1;
			required string type = 2;
		}
		repeated CustomSfuEvent customSfuEvents = 1;
		repeated SfuExtensionStats extensionStats = 2;
		repeated SfuInboundRtpPad inboundRtpPads = 3;
		repeated SfuOutboundRtpPad outboundRtpPads = 4;
		repeated SfuSctpChannel sctpChannels = 5;
		repeated SfuTransport transports = 6;
		required string sfuId = 7;
		required int64 timestamp = 8;
		optional string marker = 9;
		optional int32 timeZoneOffsetInHours = 10;
	}
	message TurnSample {
		message TurnPeerAllocation {
			required string peerId = 1;
			required string relayedAddress = 2;
			required int32 relayedPort = 3;
			required string sessionId = 4;
			required string transportProtocol = 5;
			optional string peerAddress = 6;
			optional int32 peerPort = 7;
			optional int64 receivedBytes = 8;
			optional int32 receivedPackets = 9;
			optional int32 receivingBitrate = 10;
			optional int32 sendingBitrate = 11;
			optional int64 sentBytes = 12;
			optional int32 sentPackets = 13;
		}
		message TurnSession {
			required string sessionId = 1;
			optional string clientAddress = 2;
			optional string clientId = 3;
			optional int32 clientPort = 4;
			optional int64 nonceExpirationTime = 5;
			optional string realm = 6;
			optional int64 receivedBytes = 7;
			optional int32 receivedPackets = 8;
			optional int32 receivingBitrate = 9;
			optional int32 sendingBitrate = 10;
			optional int64 sentBytes = 11;
			optional int32 sentPackets = 12;
			optional string serverAddress = 13;
			optional int32 serverPort = 14;
			optional int64 started = 15;
			optional string transportProtocol = 16;
			optional string username = 17;
		}
		repeated TurnPeerAllocation allocations = 1;
		repeated TurnSession sessions = 2;
		required string serverId = 3;
	}
	repeated ClientSample clientSamples = 1;
	repeated SfuSample sfuSamples = 2;
	repeated TurnSample turnSamples = 3;
	optional Controls controls = 4;
}